--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,10 +16,10 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
         
-      - name: Set up JDK 1.11
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 17
           
       - uses: actions/setup-node@v2
         with:
@@ -37,7 +37,17 @@ jobs:
             ~/.android/avd/*
             ~/.android/adb*
           key: avd-${{ matrix.api-level }}
-
+ 
+      - name: create AVD and generate snapshot for caching
+        if: steps.avd-cache.outputs.cache-hit != 'true'
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: ${{ matrix.api-level }}
+          force-avd-creation: false
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: false
+          script: echo "Generated AVD snapshot for caching."
+      
       - name: run android tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
