--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,12 +7,13 @@ on:
   workflow_dispatch:
   
 jobs:
-  test:
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        api-level: [25]
+ test:
+    runs-on: ubuntu-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@v4
+
+
       - name: checkout
         uses: actions/checkout@v2
         
@@ -29,11 +30,14 @@ jobs:
             appium -v
             appium &>/dev/null &
       
-      - name: run android tests
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+      - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: ${{ matrix.api-level }}
-          force-avd-creation: false
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: true
+          api-level: 29
           script: mvn clean test -Pandroid
