--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,13 +7,12 @@ on:
   workflow_dispatch:
   
 jobs:
- test:
-    runs-on: ubuntu-latest
+  test:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        api-level: [29]
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
-
-
       - name: checkout
         uses: actions/checkout@v2
         
@@ -30,14 +29,11 @@ jobs:
             appium -v
             appium &>/dev/null &
       
-      - name: Enable KVM
-        run: |
-          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-          sudo udevadm control --reload-rules
-          sudo udevadm trigger --name-match=kvm
-
-      - name: run tests
+      - name: run android tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
+          api-level: ${{ matrix.api-level }}
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: true
           script: mvn clean test -Pandroid
