--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,11 +29,6 @@ jobs:
             appium -v
             appium &>/dev/null &
       
-      - name: run android tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          force-avd-creation: false
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: true
-          script: mvn clean test -Pandroid
+      - name: Run Android tests on BrowserStack
+        run: |
+          mvn clean test -Pandroid
