--- a/.github/workflows/runnertest.yml
+++ b/.github/workflows/runnertest.yml
@@ -21,4 +21,4 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          script: ./gradlew connectedCheck
+          script: mvn clean test -Pandroid
