--- a/.github/workflows/runnertest.yml
+++ b/.github/workflows/runnertest.yml
@@ -10,6 +10,27 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+      - name: Install Java 11
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y openjdk-11-jdk
+          java -version  # Verify the Java version
+
+      - name: Install Maven
+        run: |
+          sudo apt-get install -y maven
+          mvn -version  # Verify Maven version
+
+      - name: Install Node.js and npm
+        run: |
+          sudo apt-get install -y nodejs npm
+          node -v   # Verify Node.js version
+          npm -v    # Verify npm version
+
+      - name: Install Appium 2.0
+        run: |
+          sudo npm install -g appium@next
+          appium --version  # Verify Appium version
 
       - name: Enable KVM
         run: |
