--- a/.github/workflows/runnertest.yml
+++ b/.github/workflows/runnertest.yml
@@ -36,6 +36,18 @@ jobs:
           appium driver install uiautomator2
           appium driver list --installed  # Verify installed drivers
 
+      - name: Wait for Appium server to start
+        run: |
+          # Wait for a few seconds to allow the Appium server to initialize
+          sleep 10
+          
+          # Check if the Appium server is running by looking for the appium process
+          if ! pgrep -f "appium" > /dev/null; then
+            echo "Appium server is not running"
+            exit 1
+          else
+            echo "Appium server is running"
+          fi
       - name: Enable KVM
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
