--- a/.github/workflows/runnertest.yml
+++ b/.github/workflows/runnertest.yml
@@ -53,6 +53,8 @@ jobs:
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
+          sudo lsof -i :4723
+
 
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
