--- a/.github/workflows/runnermac.yml
+++ b/.github/workflows/runnermac.yml
@@ -12,19 +12,15 @@ jobs:
   android:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        java-version: [11, 17]  # Test with multiple Java versions
-        android-version: [30, 31]  # You can test on different Android versions
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up JDK ${{ matrix.java-version }}
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: ${{ matrix.java-version }}
+        java-version: 17
         distribution: adoptopenjdk
 
     - name: Install dependencies
@@ -62,7 +58,7 @@ jobs:
     - name: Set up Android Emulator using reactivecircus/android-emulator-runner
       uses: reactivecircus/android-emulator-runner@v2
       with:
-        api-level: ${{ matrix.android-version }}
+        api-level: 29
         target: google_apis
         arch: x86_64
         force-avd-creation: true
@@ -74,11 +70,11 @@ jobs:
         $HOME/Android/Sdk/platform-tools/adb wait-for-device
 
         # Install the APK
-        $HOME/Android/Sdk/platform-tools/adb install my-app.apk
+        $HOME/Android/Sdk/platform-tools/adb install app-cd-vendor-debug.apk
 
     - name: Run Appium tests using TestNG
       run: |
-        mvn clean test -Dtestng.groups="smoke" -Dappium.app.path="my-app.apk"
+        mvn clean test -Dplatform=android
       
     - name: Upload TestNG Reports
       uses: actions/upload-artifact@v3
